--- a/include/i18n/en_US/help/tips/dashboard.my_profile.yaml
+++ b/include/i18n/en_US/help/tips/dashboard.my_profile.yaml
@@ -21,10 +21,11 @@ username:
     title: Username
     content: >
         Only those Agents with Admin status may change a username. If you are an
-        Agent with Admin privileges, you can accomplish this under the <span
-        class="doc-desc-title">Agent</span> (Staff)<span class="doc-desc-title">
-       </span> tab in the Admin Panel. (To change a username, including your own,
-        see, Admin Panel -> Agent (Staff) -> Agent (Staff) Members).
+        Agent with Admin privileges, you may accomplish this by selecting an Agent
+        to edit from the <span class="doc-desc-title">Staff Members</span> table.
+    links:
+      - title: Change a username as an Administrator
+        href: /scp/staff.php
 
 time_zone:
     title: Time Zone
@@ -53,9 +54,10 @@ default_paper_size:
 show_assigned_tickets:
     title: Show Assigned Tickets
     content: >
-        If enabled, your name will be hidden from the Open Tickets queue for those
-        tickets which you have been assigned. Upon hiding, the Department name to
-        which you belong will replace where your name is normally displayed.
+        Enable this to hide your name from the <span class="doc-desc-title">Open 
+        Tickets</span> queue for those tickets which you have been assigned. Upon 
+        hiding, the <span class="doc-desc-title">Department</span> name to which
+        you belong will replace where your name would normally be displayed.
 
 password:
     title: Password
@@ -76,7 +78,11 @@ confirm_new_password:
 signature:
     title: Signature
     content: >
-        What you create here will be an optional Signature that perhaps appears at
-        the end of your Ticket Responses. Whether this Signature appears, or not,
-        depends on the Email Template that will be used in a Ticket Response. (To
-        create Email Templates, see Admin Panel -> Emails -> Templates ).
+        Create an optional <span class="doc-desc-title">Signature</span> 
+        that perhaps appears at the end of your Ticket Responses. Whether this 
+        <span class="doc-desc-title">Signature</span> appears, or not, depends 
+        on the <span class="doc-desc-title">Email Template</span> that will be 
+        used in a Ticket Response. 
+    links:
+      - title: Create Emails Templates in the Admin Panel
+        href: /scp/templates.php
