--- a/include/i18n/en_US/help/tips/dashboard.system_logs.yaml
+++ b/include/i18n/en_US/help/tips/dashboard.system_logs.yaml
@@ -18,10 +18,10 @@ system_logs:
     content: >
         If there is anything that is not working correctly, this is the place to
         start. This is where you will find any troubleshooting related logging
-        activity (e.g., Errors, Warnings, or Bugs). To hone in on a specific type,
-        see the <span class="doc-desc-title">Type</span> dropdown box.
-        Additionally, the type of events that are included in the System Logs can
-        be customized under <span class="doc-desc-title">System Settings</span>.
+        activity (e.g., Errors, Warnings, or Bugs). 
+    links:
+      - title: Customize what type of activity is logged by changing the <br /><span class="doc-desc-title">Default Log Level</span>.
+        href: /scp/settings.php?t=system
 
 date_span:
     title: Date Span
@@ -32,7 +32,10 @@ date_span:
 type:
     title: Type
     content: >
-        Select the System Log type of interest.
+        Choose an option to narrow your focus on a specific type of activity. 
+        <span class="doc-desc-opt">Debug</span> represents the least 
+        severity, and <span class="doc-desc-opt">Error</span> represents 
+        the greatest severity.
 
 showing_logs:
     title: Showing&hellip;Logs
