--- a/include/i18n/en_US/help/tips/settings.ticket.yaml
+++ b/include/i18n/en_US/help/tips/settings.ticket.yaml
@@ -18,7 +18,11 @@ global_ticket_settings_options:
     content: >
         These settings are <span class="doc-desc-title">global,</span> in that they
         apply until they are overridden by other possible system settings (e.g., a
-        Department’s SLA Plan overrides the Global Default SLA Plan set below).
+        <span class="doc-desc-title">Department’s SLA Plan</span> overrides the 
+        <span class="doc-desc-title">Global Default SLA Plan</span> set below).
+    links:
+      - title: Select a Department to edit its Default SLA Plan
+        href: /scp/departments.php
 
 ticket_ids:
     title: Ticket IDs
@@ -28,28 +32,35 @@ ticket_ids:
 default_sla:
     title: Default SLA
     content: >
-        Default SLA Plan to dictate how long a Ticket can remain Open before it is
-        rendered Overdue. (To create more SLA Plans, see Admin Panel -> Manage -⁠>
-        SLA Plans).
+        Choose the default Service Level Agreement to manage how long a Ticket
+        can remain Open before it is rendered Overdue.
+    links:
+      - title: Create more SLA Plans
+        href: scp/slas.php
 
 default_priority:
     title: Default Priority
     content: >
         Choose between Low, Normal, High &amp; Emergency for all tickets not
-        auto-assigned to a Help Topic or Department
+        auto-assigned to a Help Topic or Department.
 
 maximum_open_tickets:
     title: Maximum Open Tickets
     content: >
-        Enter the maximum Open Tickets a Client is permitted to have
-        simultaneously. This will help protect against spam and enable email flood
-        control. If you prefer to remove this limitation on Clients however,  enter
-        0 for unlimited.
+        Enter the maximum <em>number</em> of <span class="doc-desc-title">Open
+        Tickets</span> a Client is permitted to have simultaneously. This will help protect 
+        against spam and enable email flood control. Enter <span class="doc-desc-opt">0
+        </span> if you prefer to disable this limitation.
 
-ticket_auto_lock_priority:
-    title: Ticket Auto-lock Priority
+agent_collision_avoidance:
+    title: Agent Collision Avoidance
     content: >
-        Minutes to lock a ticket on activity - enter 0 to disable locking
+        Enter the length of time after an Agent stops ticket-response activity that a 
+        lockout period takes affect. This lockout prevents other Agents from sending 
+        a ticket response to the Client. It does not however prevent others from 
+        composing a draft. If the locking Agent sends their response, then any other 
+        Agent’s draft will be deleted. Enter <span class="doc-desc-opt">0</span> 
+        to disable the lockout feature.
 
 email_ticket_priority:
     title: Email Ticket Priority
@@ -65,33 +76,28 @@ show_related_tickets:
 human_verification:
     title: Human Verification
     content: >
-        Enable CAPTCHA on new web tickets. CAPTCHA is a type of challenge-response
-        test that typically only humans can pass. It displays a picture with text
-        inside of it so a bot/spider cannot readily read the text like a human can.
-        When the Client enters the text, it will check whether the Client’s input
-        matches  the text inside the image. GDLib is a software graphics library
-        that is required to run CAPTCHA.
+        Enable CAPTCHA on the Client Portal to verify an incoming ticket is the 
+        result of human activity.
 
 claim_tickets:
     title: Claim Tickets
     content: >
-        Not every ticket is immediately assigned to an Agent depending on System
-        Settings. However, when an eligible Agent responds to the Client for the
-        first time, that Agent will then be immediately assigned that Ticket if the
-        <span class="doc-desc-title">Claim Tickets</span> feature is enabled.
+        Enable this to auto-assign unassigned tickets to the initially responding Agent.
+        Also, reopened tickets are always assigned to the last respondent.
 
 assigned_tickets:
     title: Assigned Tickets
     content: >
-        If enabled, this will permit any Agent to see tickets that are assigned to
-        another specific Agent other than himself/herself.
+        Enable this feature to make visible (in the <span class="doc-desc-title">Open
+        Queue</span>) Ticket Assignments that do not belong to the current user.
 
 answered_tickets:
     title: Answered Tickets
     content: >
-        Show tickets that have been answered by staff  in open queue. If not check,
-        answered tickets will show up in a separate column until user responds,
-        thereby moving it to the opened queue.
+        Show tickets that have been answered by an Agent in the 
+        <span class="doc-desc-title">Open Queue</span>. If this is not enabled, 
+        answered tickets will be display in the <span class="doc-desc-title">Answered 
+        Tickets Queue</span>.
 
 staff_identity_masking:
     title: Staff Identity Masking
